--- a/sass/bits/_header.scss
+++ b/sass/bits/_header.scss
@@ -96,8 +96,8 @@ h1.title {
 	text-indent: -999em;
 	height: 40px;
 	width: 40px;
-	top: 40px;
-	right: 40px;
+	top: 20px;
+	right: 0;
 }
 .no-svg .menu-toggle {
 	background-image: url(../img/menu.png);
